[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Courtroom.png" type="Texture" id=1]
[ext_resource path="res://EndScreen.gd" type="Script" id=2]
[ext_resource path="res://assets/Courtroom.tres" type="Theme" id=3]

[node name="EndScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="Courtroom" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="EndScreenPlayAgainLabel" type="Label" parent="."]
margin_left = 808.0
margin_top = 351.0
margin_right = 1158.0
margin_bottom = 459.0
theme = ExtResource( 3 )
text = "Play Again?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndScreenYesButton" type="Button" parent="."]
margin_left = 616.0
margin_top = 481.0
margin_right = 896.0
margin_bottom = 589.0
theme = ExtResource( 3 )
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndScreenNoButton" type="Button" parent="."]
margin_left = 1060.0
margin_top = 479.0
margin_right = 1340.0
margin_bottom = 587.0
theme = ExtResource( 3 )
text = "No"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndScreenScoreLabel" type="Label" parent="."]
margin_left = 768.0
margin_top = 635.0
margin_right = 1187.0
margin_bottom = 743.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="EndScreenYesButton" to="." method="_on_EndScreenYesButton_pressed"]
[connection signal="pressed" from="EndScreenNoButton" to="." method="_on_EndScreenNoButton_pressed"]
